--- a/public/custom.css
+++ b/public/custom.css
@@ -30,6 +30,33 @@ h2 {
     background: #913737;
     box-shadow: 0 0 0 0.25rem rgba(145, 55, 55,0.5);
 }
+.btn {
+    border: 1px solid #913737;
+}   
+.btn-primary {
+    width: auto;
+    background-color: #913737;
+    padding: 10px 20px;
+    border: 1px solid #913737 !important;
+    color: #ffffff;
+}
+.btn-primary:hover {
+    color: #913737;
+    background-color: white;
+    border: 1px solid #913737;
+}   
+.btn.btn-primary.hover-non-transparent:hover {
+    background-color: #913737;
+    color: #ffffff;
+}
+.btn-secondary:hover {
+    background-color: #7a2f2f;
+    border: #7a2f2f;
+}
+.btn-transparent {
+    background-color: transparent;
+    color: #7a2f2f;
+}
 [type="radio"]:checked,
 [type="radio"]:not(:checked) {
     position: absolute;
@@ -125,13 +152,11 @@ input[type="checkbox"]::before {
     height: 20px;
     background-color: #e1e1e1;
 }
-  
 .switch input { 
     opacity: 0;
     width: 0;
     height: 0;
-}
-
+}   
 .slider {
     position: absolute;
     cursor: pointer;
@@ -142,7 +167,6 @@ input[type="checkbox"]::before {
     -webkit-transition: .4s;
     transition: .4s;
 }
-
 .slider:before {
     position: absolute;
     content: "";
@@ -183,9 +207,13 @@ input:checked + .slider:before {
 .nav-1 .logo-link .logo {
     height: 75px;
 }
+
 .nav-2 {
     background: white;
     border-bottom: 2px solid #d9d4d440;
+}
+.nav-2 > .container {
+    position: relative;
 }
 .nav-2 .login-btn.for-mobile, .nav-2 .signup-btn.for-mobile {
     display: none;
@@ -199,40 +227,46 @@ input:checked + .slider:before {
 .card-1 {
     border: none;
 }
+.card-1 .img-container {
+    position: relative;
+}
 .card-1 .img-top {
+    border-radius: 16px;
     width: 100%;
+}
+.card-1 .img-container .discount {
+    padding: 12px;
+    position: absolute;
+    display: flex;
+    gap: 3px;
+    bottom: 0;
+    background: #913737;
+    border-top-right-radius: 30px;
+}
+.card-1 .img-container .discount .percentage {
+    font-size: 42px;
+    font-weight: 700;
+    color: white;
+    line-height: 33px;
+}
+.card-1 .img-container .discount .percentage-sign-and-off-text-container {
+    display: flex;
+    flex-direction: column;
+    gap: 4px;
+}
+.card-1 .img-container .discount .percentage-sign-and-off-text-container .percentage-sign {
+    color: white;
+    font-size: 17px;
+    line-height: 19px;
+}   
+.card-1 .img-container .discount .percentage-sign-and-off-text-container .off-text {
+    color: white;
+    line-height: 10px;
+    font-size: 16px;
 }
 .card-1 .title {
     margin-top: 20px;
 }
-.btn {
-    border: 1px solid #913737;
-}   
-.btn-primary {
-    width: auto;
-    background-color: #913737;
-    padding: 10px 20px;
-    border: 1px solid #913737 !important;
-    color: #ffffff;
-}
-.btn-primary:hover {
-    color: #913737;
-    background-color: white;
-    border: 1px solid #913737;
-}   
-.btn.btn-primary.hover-non-transparent:hover {
-    background-color: #913737;
-    color: #ffffff;
-}
-.btn-secondary:hover {
-    background-color: #7a2f2f;
-    border: #7a2f2f;
-}
-.btn-transparent {
-    background-color: transparent;
-    color: #7a2f2f;
-}
-
 .days-remaining {
     width: fit-content;
     text-align: center;
@@ -244,7 +278,6 @@ input:checked + .slider:before {
     font-size: 18px;
     margin-top: 10px;
 }
-
 .work {
     background-color: #ffae0010;
 }
@@ -323,8 +356,8 @@ input:checked + .slider:before {
     align-items: center;
 }
 .select-container svg {
-    width: 20px; 
-    height: 20px; 
+    width: 16px; 
+    height: 16px; 
 }
 .form-select:focus, .form-control:focus {
     border-color: #a9a7a7 !important;
@@ -806,15 +839,25 @@ border-radius: 10px
     padding: 0;
 }
 .features-and-app-download-section .app-download-container {
+    background-image: url(home/download-apps-curve.png);
+    background-position: 50% bottom;
+    background-repeat: no-repeat;
     position: relative;
 }
-.features-and-app-download-section .app-download-container .content {
-    position: absolute;
-    top: 50px;
-    width: 450px;
-    max-width: 100%;
-    left: 55%;
+.features-and-app-download-section .app-download-container .mobile-images-container .mobile-images {
+    width: 100%;
 }
+.features-and-app-download-section .app-download-container .content {
+    padding: 80px 30px 0px;
+}
+.features-and-app-download-section .app-download-container .title {
+    font-size: 60px;
+    color: #913737;
+}
+.features-and-app-download-section .app-download-container .desc {
+    font-size: 18px;
+}
+.features-and-app-download-section .app-download-container
 .search-by-food-section {
     background-color: #FEFAF1;
 }
@@ -892,14 +935,12 @@ border-radius: 10px
 }
 .field-and-label-container input {
     height: 50px;
-    flex: 1;
     border: 1px solid #e5e5e5;
     background-color: transparent;
     border-radius: 4px;
 }   
 .field-and-label-container .input-container {
     width: 100%;
-    flex: 1;
     position: relative;
 }   
 .field-and-label-container .input-container i {
@@ -946,6 +987,28 @@ border-radius: 10px
 .card-3 {
     border: none;
 }
+.card-3 .card-img-top {
+    border-radius: 16px;
+}
+.card-3 .main-img-container {
+    position: relative;
+}
+.card-3 .main-img-container .off-and-fast-label {
+    position: absolute;
+    top: 15px;
+    left: 15px;
+}
+.card-3 .main-img-container .off-and-fast-label .off-label, .card-3 .main-img-container .off-and-fast-label .fast-label {
+    color: #fff;
+    padding: 5px 10px;
+    border-radius: 5px;
+}
+.card-3 .main-img-container .off-and-fast-label .off-label {
+    background-color: #913737;
+}
+.card-3 .main-img-container .off-and-fast-label .fast-label {
+    background-color: #0A191E;
+} 
 .card-3 .content .restaurant-logo {
     width: 65px;
     height: 65px;
@@ -1732,6 +1795,37 @@ border-radius: 10px
 .navbar-container .navbar-toggler {
     box-shadow: none;
 }
+.navbar-container .nav-1 .language-sector {
+    color: #000000;
+    width: 100px;
+    box-sizing: border-box;
+    background-color: #ffffff;
+    overflow: hidden;
+}
+.navbar-container .nav-1 .language-selector .label, 
+.navbar-container .nav-1 .language-selector .options div {
+    padding: 10px 8px;
+}
+.navbar-container .nav-1 .language-selector .label {
+    user-select: none;
+}
+.navbar-container .nav-1 .language-selector .options div.selected {
+    background-color: #913737;
+    color: white;
+}
+.navbar-container .nav-1 .language-selector .options {
+    width: 100px;
+    position: absolute;
+    border: 1px solid #000;
+    background-color: #ffffff;
+    z-index: 1;
+    display: none;
+}
+.navbar-container .nav-1 .language-selector .options div:hover {
+    background-color: #a74040;
+    color: white;
+    cursor: pointer;
+}
 @media screen and (min-width:1401px) {
     .features-and-app-download-section .features-container .single-feature .text br {
         display: none;
@@ -1776,17 +1870,17 @@ border-radius: 10px
     }
     .navbar-container .navbar-toggler {
         position: absolute;
-        top: 30px;
+        top: -61px;
         right: 15px;
     }
     .navbar-container .nav-2 .navbar-collapse {
         border-bottom: 1px solid #dcdcdc;
-        position: absolute;
+        position: fixed;
         background: rgb(255, 255, 255);
         width: 100%;
         left: 0px;
         top: 100px;
-        padding: 10px;
+        padding: 15px;
     }
     .restaurant-details .reviews-modal .modal-body .rating-box .overall-rating-and-single-star-rating-row {
         padding: 30px 50px;
@@ -1800,6 +1894,23 @@ border-radius: 10px
     .features-and-app-download-section .features-container .single-feature .text-container {
         width: auto;
     } 
+    .navbar-expand-lg .navbar-nav .nav-link.active, .navbar-expand-lg .navbar-nav .nav-link:hover {
+        color: #000;
+        border-bottom: none;
+    } 
+    .features-and-app-download-section .app-download-container .content {
+        padding: 50px 30px 0px;
+    }
+    .features-and-app-download-section .app-download-container .title {
+        font-size: 40px;
+        color: #913737;
+    }
+    .features-and-app-download-section .app-download-container .desc {
+        font-size: 16px;
+    } 
+    .features-and-app-download-section .app-download-container .download-buttons  img {
+        height: 45px;
+    }
 }
 @media screen and (max-width:767px) {
     .sidebar-and-content .main-content {
@@ -2022,9 +2133,21 @@ border-radius: 10px
     }
     .card-4 .card-content-col {
         order: 2;
-    } 
+    }  
+    .navbar-container .navbar-toggler {
+        top: -54px;
+    }
     .navbar-container .nav-2 .navbar-collapse {
-        top: 87px;
+        top: 86px;
+    }
+    .features-and-app-download-section .app-download-container .content-container {
+        order: 1;
+    }
+    .features-and-app-download-section .app-download-container .mobile-images-container {
+        order: 2;
+    }
+    .features-and-app-download-section .app-download-container .content {
+        padding: 30px 30px 50px;
     }
 }
 @media screen and (max-width:575px) {
